--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,12 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+:root {
+  --bg-image: url("../images/cover-image-dark.png");
+  --bg-color: #000028;
+  --main-font-family: 'IBM Plex Mono', sans-serif;
+  --main-font-size: 18px;
+  --main-font-weight: 400;
+  --main-line-height: 130%;
+  --accent-color: #FF0070;
+}
