--- a/styles/style.css
+++ b/styles/style.css
@@ -12,10 +12,12 @@
 }
 
 .header {
+  display: grid;
+  /* gap: 55px; */
   block-size: 100vh;
   min-block-size: 668px;
-  display: grid;
   position: relative;
+  padding: 10px;
 }
 
 .decorative_text {
@@ -23,9 +25,6 @@
   right: 38px;
   top: 10px;
   color: #FF0070;
-  font-family: var(--main-font-family, sans-serif);
-  font-size: var(--main-font-size);
-  font-weight: var(--main-font-weight);
   line-height: 139%;
   text-transform: uppercase;
 }
@@ -64,18 +63,77 @@
   position: absolute;
 }
 
-.header__theme-menu {}
+.header__theme-menu {
+  justify-self: end;
+  margin-block-start: 69px;
+}
 
-.header__theme-menu-list {}
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 13px;
+}
 
-.header__theme-menu-item {}
+.header__theme-menu-item {
+  text-align: center;
+}
+
+.header__theme-menu-button {
+  color: var(--accent-color);
+  text-transform: lowercase;
+  background: transparent;
+  border: transparent;
+  cursor: pointer;
+}
+
+.header__theme-menu-button:hover {
+  outline: 1px solid rgba(255, 0, 112, 0.40);
+  padding-inline: 13px;
+  border: transparent;
+}
+
+.header__theme-menu-button:focus {
+  border-bottom: 1px solid #FF0070;
+  border-top: 1px solid transparent;
+  border-right: 1px solid transparent;
+  border-left: 1px solid transparent;
+  outline: none;
+}
+
+.header__theme-menu-button:disabled {
+  pointer-events: none;
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid #FF0070;
+  padding-inline: 13px;
+}
 
 .header__title {
+  display: block;
   color: #DB00FF;
   text-shadow: 4px 4px 0 var(--accent-color);
-  font-family: var(--main-font-family, sans-serif);
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-  font-weight: 700;
+  font-weight: var(--font-weight-bold);
   line-height: 83%;
   text-transform: lowercase;
+}
+
+.header__text {
+  align-self: start;
+}
+
+.title-decor {
+  color: var(--heading-text-color);
+  font-weight: var(--font-weight-bold);
+  background-color: var(--accent-color);
+}
+
+
+
+
+@media (768px <= width < 1024px) {
+  .header__title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
 }
