--- a/styles/variables.css
+++ b/styles/variables.css
@@ -12,7 +12,7 @@
   --font-weight-bold: 700;
   --main-line-height: 130%;
   --accent-color: #FF0070;
-  --header-text-color: #DB00FF;
+  --heading-text-color: #DB00FF;
 }
 
 .theme-light .decorative_text {
