--- a/styles/light.css
+++ b/styles/light.css
@@ -9,4 +9,22 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --bg-image: url("../images/cover-image-light.png");
+  --bg-color: #FFF1F7;
+  --main-font-family: 'IBM Plex Mono', monospace;
+  --main-text-color: #353430;
+  --main-font-size: 18px;
+  --main-font-weight: 400;
+  --font-weight-bold: 700;
+  --main-line-height: 130%;
+  --accent-color: #FF8DCB;
+  --decoration-color: #353430;
+  --heading-color: #FFC2E6;
+  --text-heading-color: #353430;
+  --nav-color: #353430;
+  --nav-hover-color: rgba(50, 49, 45, 0.40);
+}
+
+.theme-light .decorative_text {
+  display: none;
 }
