--- a/styles/variables.css
+++ b/styles/variables.css
@@ -5,16 +5,18 @@
 :root {
   --bg-image: url("../images/cover-image-dark.png");
   --bg-color: #000028;
-  --main-font-family: 'IBM Plex Mono', sans-serif;
+  --main-font-family: 'IBM Plex Mono', monospace;
   --main-text-color: #F1B2CE;
   --main-font-size: 18px;
   --main-font-weight: 400;
   --font-weight-bold: 700;
   --main-line-height: 130%;
   --accent-color: #FF0070;
-  --heading-text-color: #DB00FF;
+  --decoration-color: #FF0070;
+  --heading-color: #DB00FF;
+  --text-heading-color: #000028;
+  --nav-color: #FF0070;
+  --nav-hover-color: rgba(255, 0, 112, 0.40);
+  --main-gap: 10px;
 }
 
-.theme-light .decorative_text {
-  display: none;
-}
