--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,4 +9,13 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --bg-image: url("../images/cover-image-dark.png");
+  --bg-color: #000028;
+  --main-text-color: #F1B2CE;
+  --accent-color: #FF0070;
+  --decoration-color: #FF0070;
+  --heading-color: #DB00FF;
+  --text-heading-color: #000028;
+  --nav-color: #FF0070;
+  --nav-hover-color: rgba(255, 0, 112, 0.40);
 }
