--- a/styles/style.css
+++ b/styles/style.css
@@ -165,6 +165,7 @@
 
 .header__theme-menu-button_active {
   border: 1px solid var(--nav-color);
+  pointer-events: none;
 }
 
 .header__theme-menu-button:hover {
@@ -172,15 +173,11 @@
 }
 
 .header__theme-menu-button:focus {
+  outline: none;
   border-bottom: 1px solid var(--nav-color);
 }
 
-.header__theme-menu-button:disabled {
-  pointer-events: none;
-}
-
 .header__theme-menu-button:focus-visible {
-  outline: none;
   border-bottom: 1px solid var(--nav-color);
 }
 
@@ -314,7 +311,7 @@
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
     grid-auto-flow: dense;
-    max-block-size: 782px;
+    min-block-size: 782px;
   }
 
   .image1 {
@@ -336,7 +333,7 @@
 
 @media (width >= 1024px) {
   .image-block {
-  max-block-size: 1048px;
+  min-block-size: 1048px;
   }
 }
 
