--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,7 @@ body {
   font-size: var(--main-font-size);
   font-weight: var(--main-font-weight);
   line-height: var(--main-line-height);
+  background-image: var(--bg-image);
 }
 
 h1,
