--- a/styles/style.css
+++ b/styles/style.css
@@ -2,13 +2,13 @@
 
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
-  background-image: var(--bg-image);
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
   background-color: var(--bg-color);
   background-size: cover;
   object-fit: cover;
+  object-position: center;
 }
 
 .header {
@@ -174,7 +174,6 @@
 
 .header__theme-menu-button:focus {
   outline: none;
-  border-bottom: 1px solid var(--nav-color);
 }
 
 .header__theme-menu-button:focus-visible {
@@ -197,6 +196,10 @@
   font-weight: var(--font-weight-bold);
   background-color: var(--accent-color);
   font-size: var(--main-font-size);
+}
+
+.title-decor + .title-decor {
+  margin-block-start: -1px;
 }
 
 /* CONTENT */
@@ -302,7 +305,6 @@
 .image-block {
   display: grid;
   gap: var(--main-gap);
-  margin-block-start: 10px;
 }
 
 @media (width >= 768px) {
@@ -311,7 +313,8 @@
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
     grid-auto-flow: dense;
-    min-block-size: 782px;
+    margin-block-start: 10px;
+    max-block-size: 780px;
   }
 
   .image1 {
@@ -333,7 +336,7 @@
 
 @media (width >= 1024px) {
   .image-block {
-  min-block-size: 1048px;
+  max-block-size: 1048px;
   }
 }
 
@@ -343,6 +346,7 @@
   block-size: 100%;
   background-size: cover;
   object-fit: cover;
+  object-position: center;
 }
 
 /* FOOTER */
