--- a/styles/style.css
+++ b/styles/style.css
@@ -30,7 +30,6 @@
 
 @media (width >= 1024px) {
   .header {
-    padding: 20px;
     min-block-size: 768px;
     gap: 60px;
   }
@@ -114,12 +113,6 @@
   .header__title {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
     margin-inline-start: -20px;
-  }
-}
-
-@media (width >= 1024px) {
-  .header__title {
-    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 }
 
@@ -224,7 +217,6 @@
 
 @media (width >= 768px) {
   .wide-m {
-    display: grid;
     grid-template-columns: 1fr 2fr;
     gap: 20px;
   }
@@ -281,7 +273,7 @@
 }
 
 .link:focus {
-  border: 1px solid var(--main-text-color);
+  border: 1px solid currentColor;
 }
 
 .link:focus-visible {
@@ -311,10 +303,8 @@
   .image-block {
     gap: 20px;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
     grid-auto-flow: dense;
     margin-block-start: 10px;
-    max-block-size: 780px;
   }
 
   .image1 {
@@ -334,17 +324,10 @@
   }
 }
 
-@media (width >= 1024px) {
-  .image-block {
-  max-block-size: 1048px;
-  }
-}
-
 .image-block__item {
   display: block;
   inline-size: 100%;
   block-size: 100%;
-  background-size: cover;
   object-fit: cover;
   object-position: center;
 }
@@ -378,10 +361,6 @@
 @media (width >= 1024px) {
   .footer {
     min-block-size: 768px;
-  }
-
-  .footer__title {
-    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 }
 
